--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,18 +9,23 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
-    - uses: actions/checkout@v3
-    - name: set up JDK 11
-      uses: actions/setup-java@v3
+    - uses: actions/checkout@v2
+ 
+    - name: Set up JDK
+      uses: actions/setup-java@v1
       with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: gradle
-
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+        java-version: 11
+ 
+    - name: Set up Android SDK
+      uses: android-actions/sdk-manager@v2
+      with:
+        packages: "build-tools;30.0.3,platforms;android-30"
+ 
+    - name: Build Camera2
+      run: |
+        source build/envsetup.sh
+        lunch aosp_arm-eng
+        m -j $(nproc)
