--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,7 +17,19 @@ jobs:
     steps:
     - uses: actions/checkout@v2
  
-    - name: Set up JDK
-      uses: actions/setup-java@v1
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
       with:
         java-version: 11
+        distribution: temurin
+ 
+    - name: Set up Android SDK
+      uses: android-actions/sdk-manager@v2
+      with:
+        permissions: android.permission.INSTALL_GRANT_RUNTIME_PERMISSIONS
+        levels: 29
+        build-tools: 34.0.0
+        packages: "build-tools;34.0.0"
+        packages: "platform-tools"
+        packages: "platforms;android-34"
+        packages: "system-images;android-34;default;x86_64"
