--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,7 +29,4 @@ jobs:
         permissions: android.permission.INSTALL_GRANT_RUNTIME_PERMISSIONS
         levels: 29
         build-tools: 34.0.0
-        packages: "build-tools;34.0.0"
-        packages: "platform-tools"
-        packages: "platforms;android-34"
-        packages: "system-images;android-34;default;x86_64"
+        packages: "build-tools;34.0.0,platforms;android-34"
